k8s/resumebuilder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumebuilder-app
  labels:
    app: resumebuilder
spec:
  replicas: 1 # You can scale this up if needed
  selector:
    matchLabels:
      app: resumebuilder
  template:
    metadata:
      labels:
        app: resumebuilder
    spec:
      containers:
      - name: resumebuilder
        image: avishkarlakade/ai-resume-builder:latest # This will be updated by Jenkins
        ports:
        - containerPort: 3000 # Your Next.js app's default port
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "200m"
      imagePullSecrets:
      - name: dockerhub-pull-secret
