k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  type: NodePort
  selector:
    app: resume-frontend
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080   # <-- You can pick a port between 30000-32767
