k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-service
  namespace: default
spec:
  selector:
    app: resume-builder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
