k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - resumebuilder.publicvm.com
      secretName: resume-tls
  rules:
    - host: resumebuilder.publicvm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-service
                port:
                  number: 80
